[tool.poetry]
name = "olx-build"
version = "0.1.0"
description = ""
authors = ["lkrra <lkr.rafa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
